--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
  <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" type="text/css" href="monokai.css">
+</head>
 <body>
-
-<p>hello world.</p>
-
+<p>< <span class="cm-keyword">hello </span><span class="cm-property">world.</span> /></p>
 </body>
 </html> 
